# yamet

./: .gitignore  3_scoring_postprocessing.R  AUTHORS  CHANGELOG.md  CLAUDE.md  DATE  Makefile  README  README.md  Snakefile  align_old.cpp  config.yaml  encode_bamfile_test.R  encode_bamfile_test.sh  nucleosome_shadows.sh  parallelization_test.sh  reldist_plot.R  samples.tsv  scoring.Rmd  scoring_tests.R  simulate_scores.R
.github/workflows/: bottle.yml  conda.yml  cppcheck.yml  debug.yml  memleaks.yml  tar.yml  test.yml  test_compiler.yml
conda-recipe/: README.md  build.sh  meta.yaml
data/: 02_geo_glioblastoma_bulk_run.sh
encode_bulk_run/: 02_encode_bulk_annotation.sh  03_encode_bulk_run_report.Rmd  encode_bulk_run.sh
glioblastoma/: 02_preprocess_and_map_glios.sh
method/: .clang-format  CMakeLists.txt  Makefile  build.sh  meta.yaml
method/cmake/: Config.cmake.in
method/code/: align.cpp  boost.cpp  export.cpp  filter.cpp  main.cpp  parse_ref.cpp  parse_search.cpp  samp_en.cu  window.cpp
method/config/: version.h.in
method/include/: align.h  boost.h  chrData.h  datarow.h  export.h  file_classes.h  filter.h  methData.h  parse_ref.h  parse_search.h  samp_en.h  window.h
method/include/cli/: boost.h  cli_config.h
method/include/lib/: align.h  chrData.h  file_classes.h  file_stream.h  window.h
method/src/: align.cpp  boost.cpp  cli_config.cpp  file_counts.cpp  file_map.cpp  file_stream.cpp  intervals.cpp  main.cpp  parse_ref.cpp  parse_search.cpp  reference.cpp  thread_pool.cpp  window.cpp
method/test/: generate_test_inputs.R
normalization/: 00_explore_normalizations.Rmd
old/old_bash/: 1_process_bamfile.sh  2_annotate_tuples.sh  3_scoring_postprocessing.R  encode_bamfile_test.R  encode_bamfile_test.sh  parallelization_test.sh
old/old_bash/encode_bulk_run/: 02_encode_bulk_annotation.sh
old/old_bash/utils/: reldist_plot.R
old/runs/glios/: config.yaml
old/scripts/: intersect_to_correlate.R  tmp_to_tabular.py
runs/encode/: config.yaml  encode.snmk  samples.tsv
runs/glios/: config.yaml  glios.snmk  samples_glios.tsv
runs/glios/src/: 01_get_data.sh  02_preprocess_and_map_glios.sh  03_get_human_promoters.sh  04_promoters_entropy_survival.Rmd
runs/simulations/: generate_simulated_data.Rmd  generate_simulated_data_tuple_length.Rmd
runs/tuple_lengths/: config.yaml  reduced_samples_glios.tsv  tuple_length.snmk
runs/tuple_lengths/src/: entropy_stdin.py  postproc_manual_entropy_plot.R  postproc_report_all_samples.R
schemas/: config.schema.yaml  samples.schema.yaml
scripts/: 01_data_visualization.Rmd  intersect_to_correlate.R  intersect_to_correlate.sh  multisample_report.R
simulations/: README.md  Snakefile
simulations/envs/: r_emanuel_sim.yaml  r_plot.linux-64.pin.txt  r_plot.yaml  r_sim.linux-64.pin.txt  r_sim.yaml  yamet.linux-64.pin.txt  yamet.yaml
simulations/input/: parameters.tsv
simulations/src/: 01_sim_data.Rmd  01_sim_data_orig.Rmd  02_coverage_plots.Rmd  03_yamet_plots.Rmd  07_combined_figure.Rmd  08_combined_figure_adj.Rmd  atreya_panel.R  figure2.Rmd  ggtheme.R  make_grid_plots.R  mi_table.R  scmet.R  simPattern.R  yamet_search.tsv
simulations/src/between_cell/: 06_between_cell.Rmd  README.md  createTemplate.R  getSamples.R
simulations/src/between_cell_old/: README.md  between_cell_old.Rmd  createTemplate.R  getSamples.R
simulations/src/feat_diff/: 04_feat_diff.Rmd  README.md  createTemplate.R
simulations/src/within_cell/: 05_within_cell.Rmd  README.md  createTemplate.R  getSamples.R  scmet.R
simulations/src/within_cell_old/: README.md  createTemplate.R  getSamples.R  within_cell_old.Rmd
snakefiles/: glios.snmk  tuple_length.snmk
snakemake/: Snakefile
snakemake/scripts/: multisample_report.R  report.R
test/: test_flatness.py
test/test_0/: README
test/test_0/in/: regions.bed
test/test_1/: README
test/test_1/in/: reference.tsv  regions.bed  simulations.tsv
test/test_2/: README
test/test_avg/: README
test/test_avg/in/: reference.tsv  regions.bed  simulations.1.tsv  simulations.2.tsv
test/test_cluster/: README
test/test_cluster/in/: annotation.tsv  metadata.tsv  reference.tsv
test/test_normalization/: README
test/test_normalization/in/: reference.tsv  regions.bed
test/test_parse/: README
test/test_parse/in/: reference.tsv  regions.bed  simulations.tsv
test/test_shannon_norm_no_inf/in/: cell1.tsv  cell2.tsv  reference.tsv  regions.bed
test/utils/: generate_test_inputs.R
workflow/: README.md  Snakefile  Snakefile.report  render_crc_embeddings_local.R  src
workflow/envs/: processing.linux-64.pin.txt  processing.osx-arm64.pin.txt  processing.yml  r.linux-64.pin.txt  r.osx-arm64.pin.txt  r.yml  rnaseq.yml  yamet.linux-64.pin.txt  yamet.osx-arm64.pin.txt  yamet.yml
workflow/expression/: README.md  Snakefile
workflow/rules/: annotations.smk  archive.smk  argelaguet.smk  crc.smk  ecker.smk  feature_simulations.smk  figures.smk  hg19.smk  mm10.smk  mm10_annotations.smk  simulations.smk  validate.smk
workflow/rules/prototyping/: brain_prototype.sh  crc_prototype.Rmd  crc_prototype.sh
workflow/rules/src/: argelaguet.Rmd  argelaguet_embeddings.Rmd  argelaguet_to_yamet.sh  argelaguet_windows.Rmd  build_chr_cpg_ref.sh  crc.Rmd  crc_atreya.Rmd  crc_deletions.Rmd  crc_embeddings.Rmd  crc_stats.Rmd  crc_windows.Rmd  crc_windows_sce.Rmd  diff_testing.R  dirty_prototype_crc.Rmd  dirty_prototype_crc.sh  download_ecker_tars.sh  download_encode_mm10_epigenomics.sh  download_genome_sizes.sh  download_hg19_genes.sh  download_hg19_lines.sh  download_hg19_sines.sh  download_mm10_genes.sh  download_mm10_genome_sizes.sh  download_mm10_lines.sh  download_mm10_promoters.sh  download_mm10_sines.sh  download_mm10_transcripts.sh  driver_utils.R  ecker.Rmd  (+43 more)
workflow/simulations/: README.md
workflow/src/: download_encode_mm10_epigenomics.sh  download_mm10_genes.sh  download_mm10_promoters.sh  download_mm10_transcripts.sh  feature_simulation.R  get_crc_meth_files.sh
yamet-r/: .Rbuildignore  DESCRIPTION  NAMESPACE  build.sh  configure
yamet-r/R/: yamet.R
yamet-r/src/: Makevars  bindings.cpp
(+13 files in other folders)
